--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -37,11 +37,16 @@ const pageTitle = "About Me";
     </div>
 
     <div class={styles.contentSection}>
+      <h2 class={styles.sectionHeading}>Example Shoelace Button</h2>
+      <sl-button variant="primary" outline>Say Hello</sl-button>
+    </div>
+
+    <div class={styles.contentSection}>
       <h2 class={styles.sectionHeading}>Connect With Me</h2>
       <ul class={styles.linkList}>
-        <li class={styles.listItem}>Email: <a href="mailto:regulardev.click@gmail.com" class={styles.link}>regulardev.click@gmail.com</a></li>
-        <li class={styles.listItem}>GitHub: <a href="https://github.com/alnikmakh" class={styles.link}>@alnikmakh</a></li>
-        <li class={styles.listItem}>LinkedIn: <a href="https://linkedin.com/in/alnikmakh" class={styles.link}>Aleksandr Makhorin</a></li>
+        <li class={styles.listItem}><sl-icon name="envelope-fill" style="margin-right: 0.5em;"></sl-icon>Email: <a href="mailto:regulardev.click@gmail.com" class={styles.link}>regulardev.click@gmail.com</a></li>
+        <li class={styles.listItem}><sl-icon name="github" style="margin-right: 0.5em;"></sl-icon>GitHub: <a href="https://github.com/alnikmakh" class={styles.link}>@alnikmakh</a></li>
+        <li class={styles.listItem}><sl-icon name="linkedin" style="margin-right: 0.5em;"></sl-icon>LinkedIn: <a href="https://linkedin.com/in/alnikmakh" class={styles.link}>Aleksandr Makhorin</a></li>
       </ul>
     </div>
   </main>
