--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -15,22 +15,35 @@ html {
 
 body {
   min-height: 100vh;
-  background-color: #F9FAFB; /* Equivalent to bg-gray-50 */
+  background-color: #f9fafb; /* Equivalent to bg-gray-50 */
   display: flex;
   flex-direction: column;
   color: #111827; /* Default text color */
 }
 
-img, picture, video, canvas, svg {
+img,
+picture,
+video,
+canvas,
+svg {
   display: block;
   max-width: 100%;
 }
 
-input, button, textarea, select {
+input,
+button,
+textarea,
+select {
   font: inherit;
 }
 
-p, h1, h2, h3, h4, h5, h6 {
+p,
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   overflow-wrap: break-word;
 }
 
@@ -38,3 +51,4 @@ a {
   text-decoration: none;
   color: inherit;
 }
+
