--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -23,14 +23,12 @@ const {
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content={description} />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    <title>{title}</title>
+    <title>{title} | My Blog</title>
 
     <script>
       import { setBasePath } from "@shoelace-style/shoelace/dist/utilities/base-path.js";
       setBasePath("/shoelace-assets/");
-      import "@shoelace-style/shoelace/dist/components/button/button.js";
       import "@shoelace-style/shoelace/dist/components/icon/icon.js";
-      import "@shoelace-style/shoelace/dist/components/alert/alert.js";
     </script>
   </head>
   <body>
@@ -59,15 +57,10 @@ const {
               <li>
                 <a href="/" class={styles.navLink}>Home</a>
               </li>
-              <li>
-                <a href="/about" class={styles.navLink}>About</a>
-              </li>
-              <li>
-                <a href="/blog" class={styles.navLink}>Blog</a>
-              </li>
-              <li>
-                <a href="/contact" class={styles.navLink}>Contact</a>
-              </li>
+              {
+                /* Add other links like About or Contact if you recreate those pages */
+              }
+              {/* <li><a href="/about" class={styles.navLink}>About</a></li> */}
             </ul>
           </nav>
         </div>
@@ -76,10 +69,6 @@ const {
 
     <main class={styles.mainContent}>
       <slot />
-      <sl-alert open>
-        <sl-icon class slot="icon" name="info-circle"></sl-icon>
-        This is a standard alert. You can customize its content and even the icon.
-      </sl-alert>
     </main>
 
     <footer class={styles.footer}>
@@ -97,30 +86,22 @@ const {
             <h3 class={styles.footerHeading}>Links</h3>
             <ul class={styles.footerLinkList}>
               <li><a href="/" class={styles.footerLink}>Home</a></li>
-              <li><a href="/about" class={styles.footerLink}>About</a></li>
-              <li><a href="/blog" class={styles.footerLink}>Blog</a></li>
-              <li><a href="/contact" class={styles.footerLink}>Contact</a></li>
+              {/* Add other links */}
             </ul>
           </div>
 
           <div>
             <h3 class={styles.footerHeading}>Connect</h3>
             <ul class={styles.footerLinkList}>
-              <li>
-                <sl-icon
-                  name="twitter"
-                  style="vertical-align: middle; margin-right: 0.25rem;"
-                ></sl-icon><a
-                  href="https://twitter.com/yourusername"
-                  class={styles.footerLink}>Twitter</a>
-              </li>
+              {/* Update with actual links */}
               <li>
                 <sl-icon
                   name="github"
                   style="vertical-align: middle; margin-right: 0.25rem;"
                 ></sl-icon><a
                   href="https://github.com/yourusername"
-                  class={styles.footerLink}>GitHub</a>
+                  class={styles.footerLink}>GitHub</a
+                >
               </li>
               <li>
                 <sl-icon
@@ -128,7 +109,17 @@ const {
                   style="vertical-align: middle; margin-right: 0.25rem;"
                 ></sl-icon><a
                   href="https://linkedin.com/in/yourprofile"
-                  class={styles.footerLink}>LinkedIn</a>
+                  class={styles.footerLink}>LinkedIn</a
+                >
+              </li>
+              <li>
+                <sl-icon
+                  name="envelope-fill"
+                  style="vertical-align: middle; margin-right: 0.25rem;"
+                ></sl-icon><a
+                  href="mailto:your.email@example.com"
+                  class={styles.footerLink}>Email</a
+                >
               </li>
             </ul>
           </div>
